# NewRepo

./: .gitignore  CMakeLists.txt  README.md  build-gui.sh  build-release.sh  build-verify.sh  build.gradle  build.sh  gradle.properties  settings.gradle  setup.sh  worklog.md
build-verify/linux/: test  test.cpp
build-verify/windows/: engine_gui.cpp  gui_test.cpp  test.cpp
buildSrc/: build.gradle
calc-core/: build.gradle
calc-core/src/main/cpp/public/calc/: base91.hpp  base_converter.h  big_decimal.h  calc_engine.h  crypto_random.h  expression.h  expression_parser.h  function_registry.h  number_format.h  set_operations.h  symbolic_value.h  variable_store.h
calc-core/src/main/cpp/src/: base_converter.cpp  big_decimal.cpp  crypto_random.cpp  expression.cpp  expression_eval.cpp  expression_parser.cpp  function_registry.cpp  functions.cpp  number_format.cpp  set_operations.cpp  symbolic_value.cpp  variable_store.cpp
cli/: main.cpp
cmake/: mingw-w64.cmake  zig-macos.cmake
java-wrapper/: build.gradle
java-wrapper/src/main/java/com/calc/: CalcEngine.java  CalcResult.java  Calculator.java  NativeLoader.java
jni-bridge/: build.gradle
jni-bridge/src/main/cpp/src/: calc_jni.cpp
native-app/: build.gradle
native-app/src/main/cpp/: app_state.h  i18n.cpp  i18n.h  main.cpp  ui_calculator.h  ui_function_def.h  ui_settings.h
native-app/src/main/cpp/embedded/: fonts.cpp  fonts.h
render-engine/: build.gradle
render-engine/src/main/cpp/public/calc/: font_manager.h  imgui_renderer.h  math_renderer.h
render-engine/src/main/cpp/src/: font_manager.cpp  imgui_renderer.cpp  math_renderer.cpp
tools/: base91.py  toolchain-ensure.sh
